about page photos

--- a/about.html
+++ b/about.html
@@ -198,38 +198,47 @@
           <div class="features-image col-lg-6" data-aos="fade-up" data-aos-delay="100"><img src="assets/img/alt-services.jpg" alt=""></div>
 
           <div class="col-lg-5 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
-            <h3>Our philosophy</h3>
-            <p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi</p>
+            <h3>Our Values</h3>
+            <p> </p>
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-easel flex-shrink-0"></i>
               <div>
-                <h4><a href="" class="stretched-link">Lorem Ipsum</a></h4>
-                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+                <h4><a href="" class="stretched-link">Purpose</a></h4>
+                <p>We are on a mission to use eviction data for good. To identify the most vulnerable populations and create preventative policy to combat the housing crisis.</p>
               </div>
             </div><!-- End Icon Box -->
 
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-patch-check flex-shrink-0"></i>
               <div>
-                <h4><a href="" class="stretched-link">Nemo Enim</a></h4>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+                <h4><a href="" class="stretched-link">Integrity</a></h4>
+                <p>The data we utalize is the summation of individual human experiences. Therefore we strive to protect the privacy of the individuals whose data we possess.</p>
               </div>
             </div><!-- End Icon Box -->
 
+            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
+              <i class="bi bi-brightness-high flex-shrink-0"></i>
+              <div>
+                <h4><a href="" class="stretched-link">Excellence</a></h4>
+                <p> Committed to providing the highest quality and accessible analysis of eviction data </p>
+              </div>
+            </div><!-- End Icon Box -->
+
+            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
+              <i class="bi bi-easel flex-shrink-0"></i>
+              <div>
+                <h4><a href="" class="stretched-link">Innovation</a></h4>
+                <p>Utalizing analyisis of the data to create policy solutions that have real impact</p>
+              </div>
+            </div><!-- End Icon Box -->
+
+            
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="500">
               <i class="bi bi-brightness-high flex-shrink-0"></i>
               <div>
-                <h4><a href="" class="stretched-link">Dine Pad</a></h4>
-                <p>Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus aut eligendi omnis</p>
-              </div>
-            </div><!-- End Icon Box -->
-
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="600">
-              <i class="bi bi-brightness-high flex-shrink-0"></i>
-              <div>
-                <h4><a href="" class="stretched-link">Tride clov</a></h4>
-                <p>Est voluptatem labore deleniti quis a delectus et. Saepe dolorem libero sit non aspernatur odit amet. Et eligendi</p>
+                <h4><a href="" class="stretched-link">Excellence</a></h4>
+                <p>Committed to providing the highest quality and accessible analysis of eviction data</p>
               </div>
             </div><!-- End Icon Box -->
 
@@ -248,7 +257,7 @@
         <div class="row justify-content-around gy-4">
 
           <div class="col-lg-6 d-flex flex-column justify-content-center order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
-            <h3>What we've been up to</h3>
+            <h3>Recent Activity</h3>
             <p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi</p>
 
             <div class="row">
@@ -325,7 +334,7 @@
             <div class="member-info text-center">
               <h4>Tim Thomas</h4>
               <span>Executive Director</span>
-              <p>Aliquam iure quaerat voluptatem praesentium possimus unde laudantium vel dolorum distinctio dire flow</p>
+              <p> </p>
             </div>
           </div><!-- End Team Member -->
 
@@ -335,14 +344,14 @@
               <div class="social">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href="https://live-dlab.pantheon.berkeley.edu/people/aaron-culich"><i class="bi bi-instagram"></i></a>
                 <a href="linkedin.com/in/aaron-culich"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
             <div class="member-info text-center">
               <h4>Aaron Culich</h4>
               <span>Director of Data Science</span>
-              <p>Labore ipsam sit consequatur exercitationem rerum laboriosam laudantium aut quod dolores exercitationem ut</p>
+              <p></p>
             </div>
           </div><!-- End Team Member -->
 
@@ -352,14 +361,14 @@
               <div class="social">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
                 <a href="linkedin.com/in/miaschwing"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
             <div class="member-info text-center">
               <h4>Mia Schwinghammer</h4>
               <span>Data Project Manager</span>
-              <p>Illum minima ea autem doloremque ipsum quidem quas aspernatur modi ut praesentium vel tque sed facilis at qui</p>
+              <p> </p>
             </div>
           </div><!-- End Team Member -->
 
@@ -376,7 +385,7 @@
             <div class="member-info text-center">
               <h4>Mina Mohebbi</h4>
               <span>Project Specialist</span>
-              <p>Magni voluptatem accusamus assumenda cum nisi aut qui dolorem voluptate sed et veniam quasi quam consectetur</p>
+              <p> </p>
             </div>
           </div><!-- End Team Member -->
 
@@ -410,7 +419,7 @@
             <div class="member-info text-center">
               <h4>Elizabeth Kirkpatrick Fiske</h4>
               <span>Project Specialist</span>
-              <p>Elizabeth is an undergraduate student at UC Berkeley studying Geography and Data Science. She is passionate about addressing housing precocity and displacement, particularly in the San Francisco Bay Area.</p>
+              <p> </p>
             </div>
           </div><!-- End Team Member -->
 
@@ -427,7 +436,7 @@
             <div class="member-info text-center">
               <h4>Eva Winter</h4>
               <span>Project Specialist</span>
-              <p>Cal alum with passion for grassroots public health movements. </p>
+              <p> </p>
             </div>
           </div><!-- End Team Member -->
 
