tim's review branch init

--- a/index.html
+++ b/index.html
@@ -128,7 +128,33 @@
 
     </section><!-- /Get Started Section -->
 
-    <!-- State Eviction Maps & Profiles -->
+    <!-- HPRM (needs to alternate image, consider new image that's wider) -->
+  <section id="constructions" class="constructions section">
+    <div class="container section-title">
+      <h2>Housing Precarity Risk Model</h2>
+    </div>
+    <div class="container">
+      <div class="row justify-content-between gy-4 align-items-center">
+        <div class="col-lg-6 d-flex flex-column justify-content-center state-intro-compact">
+          <h3><b><i>National Housing Precarity Risk Model</i></b></h3>
+          <p>
+            Introducing the The Housing Precarity Risk Model (HPRM), a forecast of where renters face the greatest combined risk of eviction, displacement, and long‑term poverty.
+          </p>
+          <p>
+            By integrating estimates of eviction risk with indicators of displacement vulnerability and pandemic‑era unemployment, the model highlights neighborhoods where housing precarity is most severe. These maps give policymakers, advocates, and service providers a data-driven tool to target resources, design anti-displacement strategies, and advance housing equity.
+          </p>
+          <p>
+            <a href="https://evictionresearch.net/hprm/" target="_blank">See more here</a>
+          </p>
+        </div>
+        <div class="col-lg-6">
+          <div class="col-lg-6 d-flex align-items-center">
+            <img src="images/bay_hprm.png" alt="" style="width: 100%">
+          </div>
+        </div>
+      </div>
+    </div>
+    </section> <!-- /Constructions Section  -->
     <section id="constructions" class="constructions section">
       <div class="container section-title">
         <h2>State Eviction Maps & Profiles</h2>
@@ -138,9 +164,9 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center state-intro-compact">
             <h3><b><i>State Projects</i></b></h3>
             <p>The Eviction Research Network focuses on state specific eviction trends in order to highlight racial and gender disparities in under-studied regions. </p>
-            
+
             <p>Overall these trends demonstrate a concerning rate of evictions compared to before the pandemic in 2020. Change must be done in order to provide better housing for everyone.</p>
-            
+
             <p><i>Check out the state specific pages by clicking on the state!</i></p>
           </div>
           <div class="col-lg-6">
