--- a/about.html
+++ b/about.html
@@ -105,10 +105,10 @@
           <div class="col-lg-7 about-img" data-aos="zoom-out" data-aos-delay="200"><img src="assets/img/about.jpg"></div>
 
           <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
-            <h2 class="inner-title">About us</h2>
+            <h2 class="inner-title">We build things that can't be unseen </h2>
             <div class="our-story">
               <h4>Est 1988</h4>
-              <h3>Our Story</h3>
+              <h3>What We Do</h3>
               <p>Inventore aliquam beatae at et id alias. Ipsa dolores amet consequuntur minima quia maxime autem. Quidem id sed ratione. Tenetur provident autem in reiciendis rerum at dolor. Aliquam consectetur laudantium temporibus dicta minus dolor.</p>
               <ul>
                 <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commo</span></li>
@@ -233,14 +233,6 @@
               </div>
             </div><!-- End Icon Box -->
 
-            
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="500">
-              <i class="bi bi-brightness-high flex-shrink-0"></i>
-              <div>
-                <h4><a href="" class="stretched-link">Excellence</a></h4>
-                <p>Committed to providing the highest quality and accessible analysis of eviction data</p>
-              </div>
-            </div><!-- End Icon Box -->
 
           </div>
         </div>
@@ -325,8 +317,6 @@
             <div class="member-img">
               <img src="assets/img/team/timthomas.jpeg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="timothyathomas.com"><i class="bi bi-instagram"></i></a>
                 <a href="linkedin.com/in/drtthomas"><i class="bi bi-linkedin"></i></a>
               </div>
@@ -342,8 +332,6 @@
             <div class="member-img">
               <img src="assets/img/team/aaronculich.jpeg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="https://live-dlab.pantheon.berkeley.edu/people/aaron-culich"><i class="bi bi-instagram"></i></a>
                 <a href="linkedin.com/in/aaron-culich"><i class="bi bi-linkedin"></i></a>
               </div>
@@ -359,9 +347,6 @@
             <div class="member-img">
               <img src="assets/img/team/miaproper.jpeg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
                 <a href="linkedin.com/in/miaschwing"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
@@ -376,9 +361,6 @@
             <div class="member-img">
               <img src="assets/img/team/minaproper.jpeg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
                 <a href="linkedin.com/in/mina-mohebbi00"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
@@ -393,9 +375,6 @@
             <div class="member-img">
               <img src="assets/img/team/reiproper.jpg.png" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
                 <a href="linkedin.com/in/reily-fairchild"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
@@ -410,9 +389,6 @@
             <div class="member-img">
               <img src="assets/img/team/elizabethproper.jpg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/ekfiske"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
@@ -427,9 +403,6 @@
             <div class="member-img">
               <img src="assets/img/team/evaproper.jpeg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
                 <a href="linkedin.com/in/evalwinter"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
@@ -447,13 +420,22 @@
 
     </section><!-- /Team Section -->
 
+     <!--Alumni Section -->
+    <section id="testimonials" class="testimonials section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Student Alumni</h2>
+        <p>Kasey Zapatka, Ph.D. | Pia Deshpande | Ángel Mendiola Ross | Alex Ramiller | HC Moore, Violet Davis | Miller Jacquet | Riya Rupen Patwa | Pedro Ochoa Navarrete | Jennifer Chen | Ian Kennedy Ph.D. | Anisha Keshavan Ph.D. | Yohan Min Ph.D | Max McDonald | Lucero Mejia | Avery Richards Ph.D. | Amit Cohen | Ashley Santos | Emely Ramirez | Aniket Rahane </p>
+      </div><!-- End Section Title -->
+
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Testimonials</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Research Collaborators</h2>
+        <p>Organizations helping us build the Eviction Research Network.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -490,8 +472,8 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                  <h3>Saul Goodman</h3>
-                  <h4>Ceo &amp; Founder</h4>
+                  <h3>Lisa Bates, Ph.D.</h3>
+                  <h4>Ceo &amp; Oregon Project Director, Portland State University</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                   </div>
@@ -508,8 +490,8 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
+                  <h3>Malcolm Drewery, Ph.D.</h3>
+                  <h4>Baltimore Collaborator, Coppin State University</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                   </div>
@@ -526,8 +508,8 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                  <h3>Jena Karlis</h3>
-                  <h4>Store Owner</h4>
+                  <h3>Cheng Ren</h3>
+                  <h4>New York Collaborator, University of Albany, SUNY</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                   </div>
@@ -544,8 +526,8 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                  <h3>Matt Brandon</h3>
-                  <h4>Freelancer</h4>
+                  <h3>Kathy Rowell, Ph.D.</h3>
+                  <h4>Ohio Collaborator, Sinclair Community College</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                   </div>
@@ -562,8 +544,28 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                  <h3>John Larson</h3>
-                  <h4>Entrepreneur</h4>
+                  <h3>Ott Toomet, Ph.D.</h3>
+                  <h4>Washington State Collaborator, University of Washington</h4>
+                  <div class="stars">
+                    <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                  </div>
+                  <p>
+                    <i class="bi bi-quote quote-icon-left"></i>
+                    <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
+                    <i class="bi bi-quote quote-icon-right"></i>
+                  </p>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+          </div>
+
+                      <div class="swiper-slide">
+              <div class="testimonial-wrap">
+                <div class="testimonial-item">
+                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                  <h3>Ott Toomet, Ph.D.</h3>
+                  <h4>Washington State Collaborator, University of Washington</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                   </div>
