--- a/about.html
+++ b/about.html
@@ -105,10 +105,10 @@
           <div class="col-lg-7 about-img" data-aos="zoom-out" data-aos-delay="200"><img src="assets/img/about.jpg"></div>
 
           <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
-            <h2 class="inner-title">We build things that can't be unseen </h2>
+            <h2 class="inner-title">Making the invisible undeniable</h2>
             <div class="our-story">
-              <h4>Est 1988</h4>
-              <h3>What We Do</h3>
+              <h4>Est 2018</h4>
+              <h3>Mission</h3>
               <p>Inventore aliquam beatae at et id alias. Ipsa dolores amet consequuntur minima quia maxime autem. Quidem id sed ratione. Tenetur provident autem in reiciendis rerum at dolor. Aliquam consectetur laudantium temporibus dicta minus dolor.</p>
               <ul>
                 <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commo</span></li>
@@ -189,57 +189,6 @@
 
     </section><!-- /Stats Counter Section -->
 
-    <!-- Alt Services Section -->
-    <section id="alt-services" class="alt-services section">
-
-      <div class="container">
-
-        <div class="row justify-content-around gy-4">
-          <div class="features-image col-lg-6" data-aos="fade-up" data-aos-delay="100"><img src="assets/img/alt-services.jpg" alt=""></div>
-
-          <div class="col-lg-5 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
-            <h3>Our Values</h3>
-            <p> </p>
-
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
-              <i class="bi bi-easel flex-shrink-0"></i>
-              <div>
-                <h4><a href="" class="stretched-link">Purpose</a></h4>
-                <p>We are on a mission to use eviction data for good. To identify the most vulnerable populations and create preventative policy to combat the housing crisis.</p>
-              </div>
-            </div><!-- End Icon Box -->
-
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
-              <i class="bi bi-patch-check flex-shrink-0"></i>
-              <div>
-                <h4><a href="" class="stretched-link">Integrity</a></h4>
-                <p>The data we utalize is the summation of individual human experiences. Therefore we strive to protect the privacy of the individuals whose data we possess.</p>
-              </div>
-            </div><!-- End Icon Box -->
-
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
-              <i class="bi bi-brightness-high flex-shrink-0"></i>
-              <div>
-                <h4><a href="" class="stretched-link">Excellence</a></h4>
-                <p> Committed to providing the highest quality and accessible analysis of eviction data </p>
-              </div>
-            </div><!-- End Icon Box -->
-
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
-              <i class="bi bi-easel flex-shrink-0"></i>
-              <div>
-                <h4><a href="" class="stretched-link">Innovation</a></h4>
-                <p>Utalizing analyisis of the data to create policy solutions that have real impact</p>
-              </div>
-            </div><!-- End Icon Box -->
-
-
-          </div>
-        </div>
-
-      </div>
-
-    </section><!-- /Alt Services Section -->
 
     <!-- Alt Services 2 Section -->
     <section id="alt-services-2" class="alt-services-2 section">
@@ -435,7 +384,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Research Collaborators</h2>
-        <p>Organizations helping us build the Eviction Research Network.</p>
+        <p>Partners in building the Eviction Research Network.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -474,13 +423,8 @@
                   <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
                   <h3>Lisa Bates, Ph.D.</h3>
                   <h4>Ceo &amp; Oregon Project Director, Portland State University</h4>
-                  <div class="stars">
-                    <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                  </div>
                   <p>
-                    <i class="bi bi-quote quote-icon-left"></i>
                     <span>Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.</span>
-                    <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
               </div>
@@ -491,14 +435,9 @@
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                   <h3>Malcolm Drewery, Ph.D.</h3>
-                  <h4>Baltimore Collaborator, Coppin State University</h4>
-                  <div class="stars">
-                    <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                  </div>
+                  <h4>Baltimore Collaborator, Coppin State University</h>
                   <p>
-                    <i class="bi bi-quote quote-icon-left"></i>
                     <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
-                    <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
               </div>
@@ -510,13 +449,8 @@
                   <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                   <h3>Cheng Ren</h3>
                   <h4>New York Collaborator, University of Albany, SUNY</h4>
-                  <div class="stars">
-                    <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                  </div>
                   <p>
-                    <i class="bi bi-quote quote-icon-left"></i>
                     <span>Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.</span>
-                    <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
               </div>
@@ -543,36 +477,25 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                   <h3>Ott Toomet, Ph.D.</h3>
                   <h4>Washington State Collaborator, University of Washington</h4>
-                  <div class="stars">
-                    <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                  </div>
                   <p>
-                    <i class="bi bi-quote quote-icon-left"></i>
-                    <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
-                    <i class="bi bi-quote quote-icon-right"></i>
+                    <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
+                 
                   </p>
                 </div>
               </div>
             </div><!-- End testimonial item -->
 
-          </div>
-
-                      <div class="swiper-slide">
+            <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                  <h3>Ott Toomet, Ph.D.</h3>
-                  <h4>Washington State Collaborator, University of Washington</h4>
-                  <div class="stars">
-                    <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                  </div>
+                  <h3>Jose Hernandez, Ph.D</h3>
+                  <h4>Washington State Collaborator, Microsoft</h4>
                   <p>
-                    <i class="bi bi-quote quote-icon-left"></i>
                     <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
-                    <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
               </div>
