--- a/about.html
+++ b/about.html
@@ -105,21 +105,18 @@
           <div class="col-lg-7 about-img" data-aos="zoom-out" data-aos-delay="200"><img src="assets/img/about.jpg"></div>
 
           <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
-            <h2 class="inner-title">Making the invisible undeniable</h2>
+            <h2 class="inner-title">We make the invisible undeniable.</h2>
             <div class="our-story">
               <h4>Est 2018</h4>
               <h3>Mission</h3>
-              <p>Inventore aliquam beatae at et id alias. Ipsa dolores amet consequuntur minima quia maxime autem. Quidem id sed ratione. Tenetur provident autem in reiciendis rerum at dolor. Aliquam consectetur laudantium temporibus dicta minus dolor.</p>
+              <p>We make the invisible undeniable. At the Eviction Research Network, we work to build a true network of eviction research built from partnerships with organizations working on the frontlines of housing to put numbers to disparities.</p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commo</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Make eviction data from sources such as law offices usable for analysis. That means organizing, structuring, and shedding duplicate or incomplete data.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Anayze eviction data for disparities in race, sex, gender, location, and other factors.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Present our analysis in accessible ways to advocate for policy change and real world impact.</span></li>
               </ul>
-              <p>Vitae autem velit excepturi fugit. Animi ad non. Eligendi et non nesciunt suscipit repellendus porro in quo eveniet. Molestias in maxime doloremque.</p>
+              <p></p>
 
-              <div class="watch-video d-flex align-items-center position-relative">
-                <i class="bi bi-play-circle"></i>
-                <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox stretched-link">Watch Video</a>
               </div>
             </div>
           </div>
@@ -462,13 +459,8 @@
                   <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                   <h3>Kathy Rowell, Ph.D.</h3>
                   <h4>Ohio Collaborator, Sinclair Community College</h4>
-                  <div class="stars">
-                    <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                  </div>
-                  <p>
-                    <i class="bi bi-quote quote-icon-left"></i>
+                  <p></p>
                     <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
-                    <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
               </div>
