Updated Team Icons

--- a/about.html
+++ b/about.html
@@ -325,10 +325,8 @@
             <div class="member-img">
               <img src="assets/img/team/timthomas.jpeg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="timothyathomas.com"><i class="bi bi-instagram"></i></a>
                 <a href="linkedin.com/in/drtthomas"><i class="bi bi-linkedin"></i></a>
+                <a href="timothyathomas.com"><i class="bi bi-globe"></i></a>
               </div>
             </div>
             <div class="member-info text-center">
@@ -342,10 +340,8 @@
             <div class="member-img">
               <img src="assets/img/team/aaronculich.jpeg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="https://live-dlab.pantheon.berkeley.edu/people/aaron-culich"><i class="bi bi-instagram"></i></a>
                 <a href="linkedin.com/in/aaron-culich"><i class="bi bi-linkedin"></i></a>
+                <a href="https://live-dlab.pantheon.berkeley.edu/people/aaron-culich"><i class="bi bi-globe"></i></a>
               </div>
             </div>
             <div class="member-info text-center">
@@ -359,9 +355,6 @@
             <div class="member-img">
               <img src="assets/img/team/miaproper.jpeg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
                 <a href="linkedin.com/in/miaschwing"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
@@ -376,9 +369,6 @@
             <div class="member-img">
               <img src="assets/img/team/minaproper.jpeg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
                 <a href="linkedin.com/in/mina-mohebbi00"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
@@ -393,9 +383,6 @@
             <div class="member-img">
               <img src="assets/img/team/reiproper.jpg.png" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
                 <a href="linkedin.com/in/reily-fairchild"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
@@ -410,9 +397,6 @@
             <div class="member-img">
               <img src="assets/img/team/elizabethproper.jpg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/ekfiske"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
@@ -427,9 +411,6 @@
             <div class="member-img">
               <img src="assets/img/team/evaproper.jpeg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
                 <a href="linkedin.com/in/evalwinter"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
@@ -447,12 +428,12 @@
 
     </section><!-- /Team Section -->
 
-    <!-- Testimonials Section -->
+    <!-- Testimonials Section --> <!-- EKF Note: Use as Partners Section -->
     <section id="testimonials" class="testimonials section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Testimonials</h2>
+        <h2>Partners</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
