--- a/about.html
+++ b/about.html
@@ -433,11 +433,17 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Partners</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Collaborators</h2>
+        <p>Super cool awesome partners in this work.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row gy-4">
+          <div class="col-12 d-flex flex-column justify-content-start" data-aos="fade-up" data-aos-delay="100"> <!-- EKF: use full width column and start alignment to reduce left indent -->
+            <h3>Research Collaborators</h3>
+            <p>Research collaborators we work with on eviction research.</p>
+          </div>
+        </div>
 
         <div class="swiper init-swiper">
           <script type="application/json" class="swiper-config">
